--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
             - db:/var/lib/postgresql/data
         ports:
             - "${DB_PORT}:5432"
+    redis:
+        image: redis:7-alpine
+        restart: always
+        container_name: redis
+        command: [
+                "redis-server",
+                "--requirepass",
+                "${REDIS_PASSWORD}",
+                # You can add persistence options here if needed
+                # "--save 60 1",
+                # "--appendonly yes",
+            ]
+        ports:
+            - "${REDIS_PORT}:6379"
+        volumes:
+            - redis_data:/data
 
 volumes:
     db:
+    redis_data:
