CACHE prefix for cache keys, request context, better make run

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,25 @@
 # ServerConfig
 SERVER_ADDRESS="0.0.0.0:8080"
 SERVER_PORT=8080
-ENVIRONMENT="dev"
-SERVER_READ_TIMEOUT="10s"
-SERVER_WRITE_TIMEOUT="10s"
-SERVER_IDLE_TIMEOUT="60s"
+ENVIRONMENT="local"
+REQUEST_TIMEOUT="10s"
+APP_NAME="go-echo-template"
+VERSION="v0.1.0"
+
+# TelegramConfig
+TELEGRAM_CHAT_ID=-1000000000000
+TELEGRAM_BOT_TOKEN="some-token-here"
 
 # DBConfig
 DB_HOST="localhost"
 DB_PORT=5432
-DB_USER="your_db_user"
-DB_PASSWORD="your_db_password"
-DB_NAME="your_db_name"
+DB_USER="db_user"
+DB_PASSWORD="SomeNewPassword1234!"
+DB_NAME="echo_template"
 DB_SSL_MODE="disable"
 DB_MAX_OPEN_CONNS=20
 DB_MAX_IDLE_CONNS=10
 DB_MAX_IDLE_TIME="5m"
-
-# JWTConfig
-JWT_SECRET="supersecretkey"
-JWT_EXPIRATION="30m"
-JWT_REFRESH="720h"
 
 # RedisConfig
 REDIS_HOST="localhost"
@@ -34,12 +33,6 @@ SMTP_PORT=2525
 SMTP_USERNAME="your_smtp_user"
 SMTP_PASSWORD="your_smtp_password"
 SENDGRID_API_KEY="your_sendgrid_api_key"
-
-# SMSConfig
-ONESIGNAL_API_KEY="your_onesignal_api_key"
-
-# PushConfig
-PUSH_API_KEY="your_push_api_key"
 
 # ObjectConfig
 S3_REGION="us-east-1"
