--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,38 @@
 services:
+    app:
+        image: go-backend:latest
+        container_name: go-backend
+        command: air -c .air.toml
+        volumes:
+            - .:/app
+            - go-mod:/go/pkg/mod
+            - go-cache:/root/.cache/go-build
+        ports:
+            - "8080:8080"
+        env_file:
+            - .env
+        depends_on:
+            - postgres
+            - redis
+
     postgres:
         image: postgres:17.4
         restart: always
         container_name: postgres
         environment:
-            POSTGRES_HOST: ${DB_HOST}
             POSTGRES_USER: ${DB_USER}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
             POSTGRES_DB: ${DB_NAME}
-            POSTGRES_PORT: ${DB_PORT}
         volumes:
             - db:/var/lib/postgresql/data
         ports:
             - "${DB_PORT}:5432"
+
     redis:
         image: redis:7-alpine
         restart: always
         container_name: redis
-        command: [
-                "redis-server",
-                "--requirepass",
-                "${REDIS_PASSWORD}",
-                # You can add persistence options here if needed
-                # "--save 60 1",
-                # "--appendonly yes",
-            ]
+        command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
         ports:
             - "${REDIS_PORT}:6379"
         volumes:
@@ -33,3 +41,5 @@ services:
 volumes:
     db:
     redis_data:
+    go-mod:
+    go-cache:
