local dev setup completed

--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,14 @@ ENVIRONMENT="local"
 REQUEST_TIMEOUT="10s"
 APP_NAME="go-echo-template"
 VERSION="v0.1.0"
+LOCAL_WEB_URL="http://web:5173"
 
 # TelegramConfig
 TELEGRAM_CHAT_ID=-1000000000000
 TELEGRAM_BOT_TOKEN="some-token-here"
 
 # DBConfig
-DB_HOST="localhost"
+DB_HOST="postgres"
 DB_PORT=5432
 DB_USER="db_user"
 DB_PASSWORD="SomeNewPassword1234!"
@@ -22,7 +23,7 @@ DB_MAX_IDLE_CONNS=10
 DB_MAX_IDLE_TIME="5m"
 
 # RedisConfig
-REDIS_HOST="localhost"
+REDIS_HOST="redis"
 REDIS_PORT=6379
 REDIS_PASSWORD="password"
 REDIS_DB=0
