--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/app"
   cmd = "go build -buildvcs=false -o ./tmp/app ./cmd/server"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "templates/web/node_modules/"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
