--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,18 @@ services:
             - postgres
             - redis
         command: >
-            sh -c "goose -dir /app/migrations postgres 'postgres://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?sslmode=${DB_SSL_MODE}' up && 
+            sh -c "goose -dir /app/migrations postgres 'postgres://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?sslmode=${DB_SSL_MODE}' up &&
             air -c .air.toml"
+
+    web:
+        image: node:20-alpine
+        container_name: web
+        working_dir: /app
+        command: sh -c "npm install && npm run dev"
+        volumes:
+            - ./templates/web:/app
+        ports:
+            - "5173:5173"
 
     postgres:
         image: postgres:17.4
