--- a/.air.toml
+++ b/.air.toml
@@ -7,13 +7,13 @@ tmp_dir = "tmp"
   bin = "./tmp/app"
   cmd = "go build -buildvcs=false -o ./tmp/app ./cmd/server"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "templates/web/node_modules/"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "web/node_modules/"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["cmd", "internal", "templates", "migrations"]
+  include_dir = ["cmd", "internal", "template", "migration"]
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
   kill_delay = "0s"
