--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,25 +11,42 @@ services:
             - ${ENV_FILE}
         environment:
             DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@postgres:${DB_PORT}/${DB_NAME}?sslmode=${DB_SSL_MODE}
-        restart: "no"  # Run once and exit
+        restart: "no" # Run once and exit
         networks:
             - echo_template
-
-    # Main application service
     app:
-        image: echo-template:${ENV_TYPE}
-        container_name: echo-template-${ENV_TYPE}
+        image: echo-template:local
+        container_name: echo-template-local
+        volumes:
+            - .:/app
+            - go-mod:/go/pkg/mod
+            - go-cache:/root/.cache/go-build
         ports:
             - "8080:8080"
         env_file:
-            - ${ENV_FILE}
+            - .env.local
         depends_on:
             migrations:
                 condition: service_completed_successfully
-        restart: unless-stopped
         networks:
             - echo_template
-        
+
+    web:
+        image: node:20-alpine
+        container_name: web
+        working_dir: /app
+        command: sh -c "npm install && npm run dev"
+        volumes:
+            - ./web:/app
+        ports:
+            - "5173:5173"
+        networks:
+            - echo_template
+
+volumes:
+    go-mod:
+    go-cache:
+    migration:
+
 networks:
     echo_template:
-    migration:
