feat: storage added not tested

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,16 +1,17 @@
 version: "2"
 sql:
-    - schema: "migrations"
-      queries: "internal/modules/user/sqlc"
+    - schema: "migration"
+      queries: "internal/storage/user/sqlc"
       engine: "postgresql"
       gen:
           go:
               package: "sqlc"
-              out: "internal/modules/user/sqlc"
-    - schema: "migrations"
-      queries: "internal/modules/auth/sqlc"
+              out: "internal/storage/user/sqlc"
+
+    - schema: "migration"
+      queries: "internal/storage/auth/sqlc"
       engine: "postgresql"
       gen:
           go:
               package: "sqlc"
-              out: "internal/modules/auth/sqlc"
+              out: "internal/storage/auth/sqlc"
