--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,15 +1,20 @@
+# Docker Compose
+POSTGRES_USER=db_user
+POSTGRES_PASSWORD=SomeNewPassword1234!
+POSTGRES_DB=echo_template
+
 # ServerConfig
 SERVER_ADDRESS="0.0.0.0:8080"
 SERVER_PORT=8080
 ENVIRONMENT="local"
 REQUEST_TIMEOUT="10s"
-APP_NAME="go-echo-template"
+APP_NAME="echo_template"
 VERSION="v0.1.0"
 LOCAL_WEB_URL="http://web:5173"
 
 # TelegramConfig
-TELEGRAM_CHAT_ID=-1000000000000
-TELEGRAM_BOT_TOKEN="some-token-here"
+TELEGRAM_CHAT_ID=-1111111111111
+TELEGRAM_BOT_TOKEN="some-bot-token"
 
 # DBConfig
 DB_HOST="postgres"
@@ -18,6 +23,7 @@ DB_USER="db_user"
 DB_PASSWORD="SomeNewPassword1234!"
 DB_NAME="echo_template"
 DB_SSL_MODE="disable"
+DATABASE_URL="postgres://db_user:SomeNewPassword1234!@postgres:5432/echo_template?sslmode=disable"
 DB_MAX_OPEN_CONNS=20
 DB_MAX_IDLE_CONNS=10
 DB_MAX_IDLE_TIME="5m"
