--- a/docker/Dockerfile.migration
+++ b/docker/Dockerfile.migration
@@ -1,8 +1,6 @@
 # Dockerfile for migrations only
 FROM golang:1.25.1-alpine AS goose-build
-
 RUN apk add --no-cache git ca-certificates
-
 WORKDIR /build
 
 # Clone and build goose with only postgres support
@@ -16,14 +14,11 @@ RUN CGO_ENABLED=0 GOOS=linux go build \
 
 # Final migration image
 FROM alpine:3.20
-
 RUN apk --no-cache add ca-certificates
-
 WORKDIR /app
 
-# Copy goose binary and migration files
+# Copy goose binary only - migration files come from volume mount
 COPY --from=goose-build /goose /usr/local/bin/goose
-COPY migration/ ./migration/
 
 # Default command to run migrations
 CMD ["sh", "-c", "goose -dir ./migration postgres \"$DATABASE_URL\" up"]
